# lit

./: .gitignore  CHANGELOG.md  LICENSE  MULTI-PROFILE.md  README.md  REFACTORING.md  UPDATE.md  calc_crap.py  import_gitlab.py  import_jira.py  init.py  lit.py  lit.spec  parser.py  push.py  pyproject.toml  test_import_gitlab.py  test_init.py  test_lit.py  test_push.py  utils.py
.github/workflows/: build-on-release.yml  release-please.yml
